# shopping_list

./: .gitignore  README.md  config.yml  domain.yml  pyproject.toml
.rasa/cache/: cache.db
.rasa/cache/tmp0vqrws24/: synonyms.json
.rasa/cache/tmp14zp2yb_/: memorized_turns.json
.rasa/cache/tmp1843i1yh/: vocabularies.pkl
.rasa/cache/tmp438mj3qa/: vocabularies.pkl
.rasa/cache/tmp4974r2cd/: featurizer.json  ted_policy.fake_features.pkl  ted_policy.tf_model.data-00000-of-00001  ted_policy.tf_model.index
.rasa/cache/tmp5ewvocr2/: featurizer.json  ted_policy.tf_model.data-00000-of-00001  ted_policy.tf_model.index
.rasa/cache/tmp5i35dorb/: featurizer.json  ted_policy.data_example.pkl  ted_policy.fake_features.pkl  ted_policy.meta.pkl  ted_policy.tf_model.data-00000-of-00001  ted_policy.tf_model.index
.rasa/cache/tmp5kphafw2/: vocabularies.pkl
.rasa/cache/tmp5ku57zrr/: vocabularies.pkl
.rasa/cache/tmp5y6a27h9/: featurizer.json  ted_policy.tf_model.data-00000-of-00001  ted_policy.tf_model.index
.rasa/cache/tmp61812eir/: memorized_turns.json
.rasa/cache/tmp73q_h1tg/: ted_policy.data_example.pkl  ted_policy.fake_features.pkl  ted_policy.tf_model.data-00000-of-00001  ted_policy.tf_model.index
.rasa/cache/tmp7e7a3x8u/: ted_policy.data_example.pkl  ted_policy.tf_model.data-00000-of-00001  ted_policy.tf_model.index
.rasa/cache/tmp7fvdh49s/: memorized_turns.json
.rasa/cache/tmp9vv2wr2v/: vocabularies.pkl
.rasa/cache/tmp_kzdju23/: memorized_turns.json
.rasa/cache/tmp_xdi79iu/: memorized_turns.json
actions/: actions.py
data/: nlu.yml  stories.yml
(+78 files in other folders)
