[project]
name = "myapp"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "ishutov.nikita", email = ""},
]
dependencies = [
    "rasa>=3.6.1",
]
requires-python = "==3.8.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
package-type = "application"
